--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1"
+    "@rails/webpacker": "5.2.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.17.0",
+    "eslint-loader": "^4.0.2"
   },
   "version": "0.1.0",
   "devDependencies": {
