Install ahoy_matey for event tracking

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
   },
   "globals": {
     "$": true,
-    "Mustache": true
+    "Mustache": true,
+    "ahoy": true
   },
   "rules": {
     "semi": ["error", "always"],
