--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "ahoy.js": "^0.3.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
     "eslint-loader": "^4.0.2"
