Deny invalid requests

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -44,7 +44,7 @@ server {
     expires max;
     access_log off;
     add_header Cache-Control "public";
-    add_header X-Debug-Location "assets,packs";
+    # add_header X-Debug-Location "assets,packs";
   }
 
   # location ~* \.(?:jpg|jpeg|gif|png)$ {
@@ -76,5 +76,11 @@ server {
 
   if (-f $document_root/system/maintenance.html) {
     return 503;
+  }
+
+  location ~* (action|php|pl|cgi|do|asp|aspx|xslt|jsp|gch)$|(wp-includes|wp-content|cgi-bin|Autodiscover|/auth/login|/auth/settings|/manager|/feed|/bitrix/admin|/admin/content/sitetree|/administrator|/panel|/manager/html|/phpmyadmin|/HNAP1) {
+    access_log off;
+    error_log /dev/null crit;
+    deny all;
   }
 }
